--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         Git & Github Learning
     </h1>
     <h3>Testing Git hub pushing</h3>
-    <a href="www.facebook.com">Got to facebook</a>
-    
+    <a href="https://www.facebook.com">Got to facebook</a>
+
 </body>
 </html>
