testing new branch awesome button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </h1>
     <h3>Testing Git hub pushing</h3>
     <a href="https://www.facebook.com">Got to facebook</a>
+    <input type="button to a new master">
 
 </body>
 </html>
